<resources>
    <string name="app_name">Sketchware IA</string>
    <string name="auth_choice_title">Enter the amazing Dev world!</string>
    <string name="auth_choice_subtitle">Create, develop and connect with other developers</string>
    <string name="auth_login_title">Sign In</string>
    <string name="auth_register_title">Create Account</string>
    <string name="auth_skip_text">Skip</string>
    <string name="auth_login_subtitle">Enter your credentials to access your account</string>
    <string name="auth_register_subtitle">Create your account to access exclusive features</string>
    <string name="auth_benefits_title">Account Benefits</string>
    <string name="auth_benefits_description">Creating an account will give you access to exclusive features and future improvements:</string>
    <string name="auth_benefit_freelance">Freelance system and collaborative projects</string>
    <string name="auth_benefit_realtime">Real-time database for synchronization</string>
    <string name="auth_benefit_sync">Project synchronization between devices</string>
    <string name="auth_privacy_notice">By creating an account, you agree to our Terms of Use and Privacy Policy</string>
    <string name="auth_forgot_password">Forgot password</string>
    <string name="auth_no_account">Don\'t have an account? Sign up</string>
    <string name="auth_has_account">Already have an account? Sign in</string>
    <string name="auth_name_hint">Full name</string>
    <string name="auth_email_hint">Email</string>
    <string name="auth_password_hint">Password</string>
    <string name="auth_confirm_password_hint">Confirm password</string>
    <string name="auth_name_required">Name is required</string>
    <string name="auth_email_required">Email is required</string>
    <string name="auth_password_required">Password is required</string>
    <string name="auth_confirm_password_required">Password confirmation is required</string>
    <string name="auth_passwords_dont_match">Passwords don\'t match</string>
    <string name="auth_password_too_short">Password must be at least 6 characters</string>
    <string name="auth_phone_required">Phone number is required</string>
    <string name="auth_pin_required">PIN is required</string>
    <string name="auth_pin_invalid">PIN must be 6 digits</string>
    <string name="auth_birthday_required">Date of birth is required</string>
    <string name="auth_gender_required">Please select a gender</string>
    <string name="auth_home_cep_required">Home ZIP code is required</string>
    <string name="auth_login_success">Login successful!</string>
    <string name="auth_register_success">Registration successful!</string>
    <string name="auth_login_failed">Authentication failed</string>
    <string name="auth_register_failed">Registration failed</string>
    <string name="auth_save_data_failed">Failed to save user data</string>
    <string name="auth_forgot_password_coming_soon">Feature in development</string>
    <string name="auth_phone_hint">Phone number</string>
    <string name="auth_pin_hint">Access PIN</string>
    <string name="auth_birthday_hint">Date of Birth</string>
    <string name="auth_gender_hint">Gender</string>
    <string name="auth_cep_hint">ZIP Code</string>
    <string name="auth_home_cep_hint">Home ZIP Code</string>
    <string name="auth_company_size_hint">Company Size</string>
    <string name="auth_razao_social_hint">Company Name</string>
    <string name="auth_founded_at_hint">Foundation Date</string>
    <string name="auth_gender_male">Male</string>
    <string name="auth_gender_female">Female</string>
    <string name="auth_gender_non_binary">Non-binary</string>
    <string name="auth_gender_prefer_not_to_say">Prefer not to say</string>
    <string name="auth_section_personal">Personal Information</string>
    <string name="auth_section_demographic">Demographic Data</string>
    <string name="auth_section_location">Location</string>
    <string name="auth_section_business">Business Information</string>
    <string name="category_selection_required">Please select at least one category</string>
    <string name="category_selection_title">Select Specialties</string>
    <string name="category_selection_selected">Selected: </string>
    <string name="category_selection_skip">Skip this step</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="template_by_sketchware">by Sketchware</string>
    <string name="template_enter_dev_world">Enter the dev world</string>
    <string name="template_upload_icon_description">Upload template</string>
    <string name="common_word_generate">Generate</string>
    <string name="besome_blog_url">http://medium.com/sketchware</string>
    <string name="block_add_list_int_body_1">to</string>
    <string name="block_add_list_int_head">add</string>
    <string name="block_add_list_int_tail" />
    <string name="block_add_list_map_body_1">value</string>
    <string name="block_add_list_map_body_2">to</string>
    <string name="block_add_list_map_head">add key</string>
    <string name="block_add_list_map_tail" />
    <string name="block_add_list_str_body_1">to</string>
    <string name="block_add_list_str_head">add</string>
    <string name="block_add_list_str_tail" />
    <string name="block_add_map_to_list_body_1">to</string>
    <string name="block_add_map_to_list_head">add</string>
    <string name="block_add_map_to_list_tail" />
    <string name="block_add_source_directly_head">add source directly</string>
    <string name="block_add_source_directly_tail" />
    <string name="block_adview_load_ad_head" />
    <string name="block_adview_load_ad_tail">load</string>
    <string name="block_and_body_1">and</string>
    <string name="block_and_head" />
    <string name="block_and_tail" />
    <string name="block_move_to_bin">Move to recycle bin</string>
    <string name="block_bigger_body_1">></string>
    <string name="block_bigger_head" />
    <string name="block_bigger_tail" />
    <string name="block_bluetoothconnect_activate_bluetooth_head" />
    <string name="block_bluetoothconnect_activate_bluetooth_tail">activate bluetooth</string>
    <string name="block_bluetoothconnect_get_paired_devices_body_1">get paired devices to</string>
    <string name="block_bluetoothconnect_get_paired_devices_head" />
    <string name="block_bluetoothconnect_get_paired_devices_tail" />
    <string name="block_bluetoothconnect_get_random_uuid_head" />
    <string name="block_bluetoothconnect_get_random_uuid_tail">get random uuid</string>
    <string name="block_bluetoothconnect_is_bluetooth_activated_head" />
    <string name="block_bluetoothconnect_is_bluetooth_activated_tail">is bluetooth activated</string>
    <string name="block_bluetoothconnect_is_bluetooth_enabled_head" />
    <string name="block_bluetoothconnect_is_bluetooth_enabled_tail">is bluetooth enabled</string>
    <string name="block_bluetoothconnect_ready_connection_body_1">ready connection with tag</string>
    <string name="block_bluetoothconnect_ready_connection_head" />
    <string name="block_bluetoothconnect_ready_connection_tail" />
    <string name="block_bluetoothconnect_ready_connection_to_uuid_body_1">ready connection to uuid</string>
    <string name="block_bluetoothconnect_ready_connection_to_uuid_body_2">with tag</string>
    <string name="block_bluetoothconnect_ready_connection_to_uuid_head" />
    <string name="block_bluetoothconnect_ready_connection_to_uuid_tail" />
    <string name="block_bluetoothconnect_send_data_body_1">send data</string>
    <string name="block_bluetoothconnect_send_data_body_2">with tag</string>
    <string name="block_bluetoothconnect_send_data_head" />
    <string name="block_bluetoothconnect_send_data_tail" />
    <string name="block_bluetoothconnect_start_connection_body_1">start connection to address</string>
    <string name="block_bluetoothconnect_start_connection_body_2">with tag</string>
    <string name="block_bluetoothconnect_start_connection_head" />
    <string name="block_bluetoothconnect_start_connection_tail" />
    <string name="block_bluetoothconnect_start_connection_to_uuid_body_1">start connection to uuid</string>
    <string name="block_bluetoothconnect_start_connection_to_uuid_body_2">and address</string>
    <string name="block_bluetoothconnect_start_connection_to_uuid_body_3">with tag</string>
    <string name="block_bluetoothconnect_start_connection_to_uuid_head" />
    <string name="block_bluetoothconnect_start_connection_to_uuid_tail" />
    <string name="block_bluetoothconnect_stop_connection_body_1">stop connection with tag</string>
    <string name="block_bluetoothconnect_stop_connection_head" />
    <string name="block_bluetoothconnect_stop_connection_tail" />
    <string name="block_break_head">stop</string>
    <string name="block_break_tail" />
    <string name="block_calendar_add_body_1">add</string>
    <string name="block_calendar_add_body_2">value</string>
    <string name="block_calendar_add_head" />
    <string name="block_calendar_add_tail" />
    <string name="block_calendar_diff_body_1">-</string>
    <string name="block_calendar_diff_head">Difference</string>
    <string name="block_calendar_diff_tail" />
    <string name="block_calendar_format_body_1">Format</string>
    <string name="block_calendar_format_head" />
    <string name="block_calendar_format_tail" />
    <string name="block_calendar_get_now_head" />
    <string name="block_calendar_get_now_tail">getNow</string>
    <string name="block_calendar_get_time_head" />
    <string name="block_calendar_get_time_tail">getTime(ms)</string>
    <string name="block_calendar_set_body_1">set</string>
    <string name="block_calendar_set_body_2">value</string>
    <string name="block_calendar_set_head" />
    <string name="block_calendar_set_tail" />
    <string name="block_calendar_set_time_body_1">setTime</string>
    <string name="block_calendar_set_time_head" />
    <string name="block_calendar_set_time_tail">ms</string>
    <string name="block_calendarview_get_date_head" />
    <string name="block_calendarview_get_date_tail">getDate(ms)</string>
    <string name="block_calendarview_set_date_body_1">setDate</string>
    <string name="block_calendarview_set_date_head" />
    <string name="block_calendarview_set_date_tail">ms</string>
    <string name="block_calendarview_set_max_date_body_1">setMaxDate</string>
    <string name="block_calendarview_set_max_date_head" />
    <string name="block_calendarview_set_max_date_tail">ms</string>
    <string name="block_calendarview_set_min_date_body_1">setMinDate</string>
    <string name="block_calendarview_set_min_date_head" />
    <string name="block_calendarview_set_min_date_tail">ms</string>
    <string name="block_camera_start_take_picture_head" />
    <string name="block_camera_start_take_picture_tail">take picture</string>
    <string name="block_category_component_func">Component</string>
    <string name="block_category_control">Control</string>
    <string name="block_category_file">File</string>
    <string name="block_category_list">List</string>
    <string name="block_category_math">Math</string>
    <string name="block_category_moreblock">More Block</string>
    <string name="block_category_operator">Operator</string>
    <string name="block_category_var">Variable</string>
    <string name="block_category_view_func">View</string>
    <string name="block_clear_list_head">clear</string>
    <string name="block_clear_list_tail" />
    <string name="block_close_drawer_head">closeDrawer</string>
    <string name="block_close_drawer_tail" />
    <string name="block_contain_list_int_body_1">contains</string>
    <string name="block_contain_list_int_head" />
    <string name="block_contain_list_int_tail" />
    <string name="block_contain_list_map_body_1">contains at</string>
    <string name="block_contain_list_map_body_2">key</string>
</resources>